--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -60,3 +60,5 @@ jobs:
           path: test/reports
       - store_artifacts:
           path: test/reports
+      - store_artifacts:
+          path: tmp/screenshots
