Store system test failure screenshots as CircleCI artifacts

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,3 +45,5 @@ jobs:
           path: test/reports
       - store_artifacts:
           path: test/reports
+      - store_artifacts:
+          path: tmp/screenshots
